--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
         "express": "^4.14.0",
         "http-proxy-middleware": "^0.19.1",
         "jest": "^24.7.1",
+        "moment": "^2.29.1",
         "multer": "^1.3.0",
         "react": "^16.9.0-alpha.0",
+        "react-datetime": "^3.0.4",
         "react-dom": "^16.9.0-alpha.0",
+        "react-moment": "^1.0.0",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
